# AB6_AI

./: .env.example  .gitignore  FILE_AUDIT_README.md  LEGACY.md  README.md  demo.py  docker-compose.yml  interactive_demo.py  mentor_app.py  pyproject.toml  sample_cycle.json  start-live.ps1  start-nodocker.ps1  stop-live.ps1  web_demo.py  youtube_app.py
alembic/: alembic.ini  env.py
alembic/versions/: 0001_initial_schema.py
docs/: EMBEDDED_SYSTEM_ARCHITECTURE.md  README.md  SYSTEM_DESIGN.md  api.md  architecture.md  concept_graph.md  intervention_types.md
docs/phase-01-foundation/: 00-system-design.md  01-pyproject-toml.md  02-gitignore-env.md  03-config-settings.md  04-llm-config.md  05-database-engine.md  06-orm-models.md  07-repositories.md  08-shared-utilities.md
docs/phase-02-llm/: 00-system-design.md  01-provider.md
docs/phase-03-event-pipeline/: 00-system-design.md  01-event-pipeline.md
docs/phase-04-concept-graph/: 00-system-design.md  01-concept-graph.md
docs/phase-05-ooda-agent/: 00-system-design.md  01-state-and-graph.md  02-nodes.md  03-tools-and-prompts.md
docs/phase-06-dual-memory/: 00-system-design.md  01-dual-memory.md
docs/phase-07-intervention-engine/: 00-system-design.md  01-intervention-engine.md
docs/phase-08-api-layer/: 00-system-design.md  01-api-layer.md
legacy/: __init__.py  youtube_app.py
legacy/agent/: graph.py  state.py
scripts/: benchmark_updater.py  build_concept_graph.py  seed_wisdom.py
templates/: youtube_login.html  youtube_results.html  youtube_watch.html
tests/: conftest.py
ui/: README.md  streamlit_app.py
(+130 files in other folders)
